Feat (auth): Add email OTP password recovery
