# app/Models/User.php
@@ -35,21 +35,6 @@ class User extends Authenticatable
         ];
     }
 
-    public function sendPasswordResetNotification($token): void
-{
-    $frontendUrl = config('app.frontend_url', 'http://localhost:5173');
-    $resetUrl = $frontendUrl . '/reset-password?token=' . $token . '&email=' . urlencode($this->email);
-
-    \Illuminate\Support\Facades\Log::info('Password reset link', [
-        'email' => $this->email,
-        'url'   => $resetUrl,
-        'token' => $token,
-    ]);
-
-    // TODO: Gửi email thật khi deploy production
-    // $this->notify(new \App\Notifications\ResetPasswordNotification($resetUrl));
-}
-
     /**
      * @return BelongsTo<Branch, $this>
      */
@@ -88,6 +73,14 @@ class User extends Authenticatable
     public function socialAccounts(): HasMany
     {
         return $this->hasMany(SocialAccount::class);
+    }
+
+    /**
+     * @return HasMany<PasswordRecoveryChallenge, $this>
+     */
+    public function passwordRecoveryChallenges(): HasMany
+    {
+        return $this->hasMany(PasswordRecoveryChallenge::class);
     }
 
     /**
